--- a/index.html
+++ b/index.html
@@ -6,3 +6,18 @@
     <title>Movie Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+    <header>
+        <img src="icons/witflix-logo.png" alt="logo" width="100">
+        <nav>
+            <a href="#">Topic 1</a>
+            <a href="#">Topic 2</a>
+            <a href="#">Topic 3</a>
+            <a href="#">Topic 4</a>
+        </nav>
+        <div class="search">
+            <input type="text" placeholder="Search">
+            <button>🔍</button>
+        </div>
+        <div class="profile">🔔</div>
+    </header>
