--- a/index.html
+++ b/index.html
@@ -21,3 +21,27 @@
         </div>
         <div class="profile">🔔</div>
     </header>
+
+    <main>
+        <section class="featured-movie">
+            <h1>MOVIE NAME</h1>
+            <p class="rating">⭐ 7.3 IMDB | ⏳ 2h 21min</p>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <p class="details">
+                <strong>Starring:</strong> Lorem Ipsum, Lorem Ipsum<br>
+                <strong>Genre:</strong> Lorem Ipsum, Lorem Ipsum<br>
+                <strong>Tags:</strong> Lorem Ipsum, Lorem Ipsum
+            </p>
+            <button class="play-btn">Play Now</button>
+        </section>
+        <section class="movie-list">
+            <h2>Popular Movies</h2>
+            <div class="movies">
+                <div class="movie">
+                    <div class="thumbnail"></div>
+                    <p>MOVIE NAME</p>
+                    <p>⏳ 2h 21min</p>
+                    <button>Play Now</button>
+
