--- a/index.html
+++ b/index.html
@@ -44,4 +44,51 @@
                     <p>MOVIE NAME</p>
                     <p>⏳ 2h 21min</p>
                     <button>Play Now</button>
-
+                </div>
+                <div class="movie">
+                    <div class="thumbnail"></div>
+                    <p>MOVIE NAME</p>
+                    <p>⏳ 2h 21min</p>
+                    <button>Play Now</button>
+                </div>
+            </div>
+            <a href="#" class="view-all">View All</a>
+        </section>
+        <section class="movie-list recommended">
+            <h2>Recommended for You</h2>
+            <div class="movies">
+                <div class="movie">
+                    <div class="thumbnail"></div>
+                    <p>MOVIE NAME</p>
+                    <p>⏳ 2h 21min</p>
+                    <button>Play Now</button>
+                </div>
+                <div class="movie">
+                    <div class="thumbnail"></div>
+                    <p>MOVIE NAME</p>
+                    <p>⏳ 2h 21min</p>
+                    <button>Play Now</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="links">
+            <a href="#">Terms of Use</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">FAQ</a>
+            <a href="#">Watch List</a>
+        </div>
+        <div class="social">
+            <p>Follow Us</p>
+            <a href="#"><img src="icons/facebook-icon.png" alt="Facebook"></a>
+            <a href="#"><img src="icons/twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="icons/youtube-icon.png" alt="YouTube"></a>
+        </div>
+        <div class="apps">
+            <a href="#"><img src="icons/applestore.png" alt="applestore"></a>
+            <a href="#"><img src="icons/googleplay.png" alt="googleplay"></a>
+        </div>
+    </footer>
+</body>
+</html>
