eklemeler ve düzenlemeler

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styless.css">
 </head>
 <body>
     <header>
@@ -78,16 +78,18 @@
             <a href="#">Privacy Policy</a>
             <a href="#">FAQ</a>
             <a href="#">Watch List</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="social">
             <p>Follow Us</p>
-            <a href="#"><img src="icons/facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="icons/twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="icons/youtube-icon.png" alt="YouTube"></a>
+            <a href="#"><img src="icons/facebook-icon.png" alt="Facebook" width="50"></a>
+            <a href="#"><img src="icons/twitter-icon.png" alt="Twitter" width="50"></a>
+            <a href="#"><img src="icons/youtube-icon.png" alt="YouTube" width="50"></a>
         </div>
         <div class="apps">
-            <a href="#"><img src="icons/applestore.png" alt="applestore"></a>
-            <a href="#"><img src="icons/googleplay.png" alt="googleplay"></a>
+            <p>Apps</p>
+            <a href="#"><img src="icons/applestore.png" alt="applestore" width="200"></a>
+            <a href="#"><img src="icons/googleplay.png" alt="googleplay" width="200"></a>
         </div>
     </footer>
 </body>
