eklemeler ve düzenlemeler2

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
             <input type="text" placeholder="Search">
             <button>🔍</button>
         </div>
-        <div class="profile">🔔</div>
+        <div class="ring">🔔</div>
+        <div class="profile"><img src="icons/User_icon_2.svg.png" alt="profile" width="35"></div>
     </header>
 
     <main>
         <section class="featured-movie">
             <h1>MOVIE NAME</h1>
-            <p class="rating">⭐ 7.3 IMDB | ⏳ 2h 21min</p>
+            <p class="rating">⭐⭐⭐⭐⭐ 7.3 IMDB | ⏳ 2h 21min</p>
             <p class="description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
@@ -38,7 +39,14 @@
         </section>
         <section class="movie-list">
             <h2>Popular Movies</h2>
+            <a href="#" class="view-all">View All</a>
             <div class="movies">
+                <div class="movie">
+                    <div class="thumbnail"></div>
+                    <p>MOVIE NAME</p>
+                    <p>⏳ 2h 21min</p>
+                    <button>Play Now</button>
+                </div>
                 <div class="movie">
                     <div class="thumbnail"></div>
                     <p>MOVIE NAME</p>
@@ -52,10 +60,11 @@
                     <button>Play Now</button>
                 </div>
             </div>
-            <a href="#" class="view-all">View All</a>
+            
         </section>
         <section class="movie-list recommended">
             <h2>Recommended for You</h2>
+            <a href="#" class="view-all">View All</a>
             <div class="movies">
                 <div class="movie">
                     <div class="thumbnail"></div>
@@ -69,6 +78,13 @@
                     <p>⏳ 2h 21min</p>
                     <button>Play Now</button>
                 </div>
+                <div class="movie">
+                    <div class="thumbnail"></div>
+                    <p>MOVIE NAME</p>
+                    <p>⏳ 2h 21min</p>
+                    <button>Play Now</button>
+                </div>
+            
             </div>
         </section>
     </main>
